--- a/src/components/HomePage/Glimpse/Glimpse.css
+++ b/src/components/HomePage/Glimpse/Glimpse.css
@@ -1,24 +1,20 @@
-
-
 .yt-videos {
-  -webkit-column-count: 3;
-  -moz-column-count: 3;
-  column-count: 3;
-  -webkit-column-width: 33%;
-  -moz-column-width: 33%;
-  column-width: 33%;
   padding: 0px 10px;
-  margin: 0 10%;
-  margin-bottom: 3%;
 }
 .glimpse {
+  display: block;
   padding: 10px 10px;
-
 }
+
+@media (min-width: 786px) {
+  .glimpse {
+    display: inline-block;
+  }
+}
+
 .glimpse iframe:hover {
   opacity: 0.8;
   border: 2px solid var(--border-yellow);
-  
 }
 .glimpse iframe {
   width: 100%;
@@ -28,41 +24,8 @@
   margin: 0;
 }
 
-
-@media screen and (max-width: 1150px) {
-  .yt-videos {
-    -webkit-column-count: 3;
-    -moz-column-count: 3;
-    column-count: 3;
-    padding: 0px 0px;
-    margin: 0 4%;
-  }
-}
-@media screen and (max-width: 991px) {
-  .yt-videos {
-    -webkit-column-count: 2;
-    -moz-column-count: 2;
-    column-count: 2;
-    margin: 0 6%;
-  }
-}
-@media screen and (max-width: 536px) {
-  .yt-videos {
-    -webkit-column-count: 1;
-    -moz-column-count: 1;
-    column-count: 1;
-    margin: 0 3%;
-  }
-}
-
 /* Flashback Friday */
 .flash-video {
-  -webkit-column-count: 3;
-  -moz-column-count: 3;
-  column-count: 3;
-  -webkit-column-width: 33%;
-  -moz-column-width: 33%;
-  column-width: 33%;
   padding: 0px 10px;
   margin: 0 15%;
   margin-top: 2%;
@@ -77,6 +40,7 @@
   background: none;
 }
 .link {
+  display: inline-block;
   position: relative;
   padding: 15px;
 }
@@ -114,26 +78,17 @@
 }
 @media screen and (max-width: 1150px) {
   .flash-video {
-    -webkit-column-count: 3;
-    -moz-column-count: 3;
-    column-count: 3;
     padding: 0px 0px;
     margin: 0 8%;
   }
 }
 @media screen and (max-width: 991px) {
   .flash-video {
-    -webkit-column-count: 2;
-    -moz-column-count: 2;
-    column-count: 2;
     margin: 0 8%;
   }
 }
 @media screen and (max-width: 536px) {
   .flash-video {
-    -webkit-column-count: 1;
-    -moz-column-count: 1;
-    column-count: 1;
     margin: 0 10%;
   }
 }
